--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "repository": "https://github.com/jonomuller/spotify-release-tracker.git",
   "author": "Jono Muller <jonomuller@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc"
+  },
   "devDependencies": {
-    "git-cz": "^4.7.0"
+    "git-cz": "^4.7.0",
+    "serverless": "^1.75.1",
+    "serverless-webpack": "^5.3.2",
+    "terser-webpack-plugin": "^3.0.7",
+    "ts-loader": "^8.0.1",
+    "typescript": "^3.9.7",
+    "webpack": "^4.43.0"
   }
 }
