--- a/package.json
+++ b/package.json
@@ -7,15 +7,24 @@
   "author": "Jono Muller <jonomuller@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "deploy": "AWS_PROFILE=personal sls deploy --stage",
+    "start:offline": "sls offline start --stage dev"
   },
   "devDependencies": {
     "git-cz": "^4.7.0",
     "serverless": "^1.75.1",
+    "serverless-offline": "^6.5.0",
     "serverless-webpack": "^5.3.2",
     "terser-webpack-plugin": "^3.0.7",
     "ts-loader": "^8.0.1",
     "typescript": "^3.9.7",
     "webpack": "^4.43.0"
+  },
+  "dependencies": {
+    "@types/aws-lambda": "^8.10.59",
+    "@types/spotify-web-api-node": "^4.0.1",
+    "aws-sdk": "^2.715.0",
+    "spotify-web-api-node": "^4.0.0"
   }
 }
