--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "deploy": "AWS_PROFILE=personal sls deploy --stage",
-    "start:offline": "sls offline start --stage dev"
+    "deploy": "AWS_PROFILE=personal sls deploy --verbose --stage",
+    "start:offline": "AWS_PROFILE=personal sls offline start --stage dev"
   },
   "devDependencies": {
     "git-cz": "^4.7.0",
     "serverless": "^1.75.1",
+    "serverless-iam-roles-per-function": "^2.0.2",
     "serverless-offline": "^6.5.0",
     "serverless-webpack": "^5.3.2",
     "terser-webpack-plugin": "^3.0.7",
